# chat-app-capstone

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py
backend/app/agents/prompts/: lead_analyst.py
backend/app/models/: events.py
backend/app/routes/: sessions.py  stream.py
backend/app/services/: mock_stream.py  normalizer.py  session.py
backend/tests/: test_health.py  test_normalizer.py
docs/: design-doc.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: app.test.tsx  decoder.test.ts  tree-builder.test.ts
frontend/src/__tests__/helpers/: event-factory.ts
frontend/src/components/: ConnectionStatus.tsx  Layout.tsx
frontend/src/components/chat/: ActivityTicker.tsx  AskUserPrompt.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  (+1 more)
frontend/src/hooks/: use-event-stream.ts  use-sse.ts
frontend/src/lib/: api.ts  decoder.ts  tree-builder.ts
frontend/src/stores/: chat-store.ts  session-store.ts  trace-store.ts
frontend/src/types/: events.ts  trace.ts
plans/deep-analyst-platform/: phase-01-setup.md  phase-02-backend.md  phase-03-decoder-state.md  phase-04-ui-components.md  phase-05-integration.md  phase-06-testing.md  plan.md
plans/deep-analyst-platform/research/: researcher-01-sdk-events.md  researcher-02-frontend-arch.md  researcher-03-sdk-integration.md
plans/deep-analyst-platform/scout/: scout-01-codebase.md
(+4 files in other folders)
